# word2img

./: .gitignore  README.md  pyproject.toml
tests/: test_auth.py  test_cli.py  test_core.py  test_effgen.py
word2img/: __init__.py  __main__.py  auth.py  core.py  effgen.py  prompts.py
